--- a/backend_application/package.json
+++ b/backend_application/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "migrate": "node-pg-migrate up --migrations-dir migrations",
+    "migrate:down": "node-pg-migrate down --migrations-dir migrations"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,7 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "node-pg-migrate": "^8.0.3",
     "nodemon": "^3.1.10"
   }
 }
