--- a/backend_application/package.json
+++ b/backend_application/package.json
@@ -20,7 +20,10 @@
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
     "node-fetch": "^3.3.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "node-pg-migrate": "^8.0.3",
