--- a/backend_application/package.json
+++ b/backend_application/package.json
@@ -14,11 +14,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "firebase": "^11.10.0",
-    "firebase-admin": "^13.4.0",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "swagger-jsdoc": "^6.2.8",
